# FOlder

./: LICENSE  folder.cabal
public/js/aloha/: VERSION.txt  aloha-nodeps.js  aloha.js
public/js/aloha/plugins/com.example.aloha.plugins.Save/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.Abbr/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.DragAndDropFiles/dep/: Ext.ux.XHRUpload.js  jquery.html5_upload.js
public/js/aloha/plugins/com.gentics.aloha.plugins.DragAndDropFiles/src/: dragndropfiles.js  dropfilesrepository.js
public/js/aloha/plugins/com.gentics.aloha.plugins.Format/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.HighlightEditables/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.Link/: LinkList.js  delicious.js  plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.LinkChecker/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.List/: plugin.js
public/js/aloha/plugins/com.gentics.aloha.plugins.Paste/: plugin.js  wordpastehandler.js
public/js/aloha/plugins/com.gentics.aloha.plugins.Table/: plugin.js
public/js/aloha/plugins/eu.phoric.aloha.plugins.Save/: plugin.js
public/js/aloha/plugins/eu.phoric.aloha.plugins.Save/i18n/: en.dict
public/theme/: FoldrDocument.css
src/: Auth.hs  Main.hs  Pages.hs  Routes.hs  State.hs
src/Pages/: AppTemplate.hs  FoldrDocument.hs
src/State/: Foldr.hs
src/Types/: Foldr.hs
